refactor(api): migrate hardcoded status strings to enums and fix N+1 queries
Phase 1 of external audit findings:

- Introduce ProjectStatus, EvaluationStatus, NotificationType enums with
  @Enumerated(EnumType.STRING) for semantic DB values
- Migrate Project.status, Evaluation.status, AppNotification.type from
  String to typed enums
- Fix N+1 queries in ProjectService, EvaluationService, ScheduleService,
  and CoordinatorGradeService via batch-fetching with findAllById /
  findByProjectIdIn
- Replace all string literal comparisons (e.g. "pending", "submitted",
  "approved") with enum constant references across services, seed data,
  and tests
- Rename computeStatus "pending" -> "awaiting" to avoid ambiguity with
  ProjectStatus.PENDING
- Clean up: remove unused java.util.Map import in ConvocationControllerTest